--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
+## -----------------------------------------------------------------------------
+## ZR Library: Windows 32 API                                zr-win/[.gitignore]
+## (c) balarabe@protonmail.com                                      License: MIT
+## -----------------------------------------------------------------------------
+
 *.bat
 *.log
 *.sh
 *`*
 _*
+
+## end
